Git actions view, part 5.