@@ -1,8 +1,10 @@
 package com.plociennik.vestal.git.push;
 
+import com.plociennik.vestal.common.VestalException;
 import com.plociennik.vestal.config.AppConfig;
 import com.plociennik.vestal.config.AppConfigManager;
 import com.plociennik.vestal.config.LocalRepository;
+import com.plociennik.vestal.git.util.FilesCollector;
 import com.plociennik.vestal.git.util.GitUtils;
 import com.plociennik.vestal.security.CredentialType;
 import com.plociennik.vestal.security.CredentialsStorage;
@@ -11,24 +13,16 @@ import lombok.extern.slf4j.Slf4j;
 import org.eclipse.jgit.api.AddCommand;
 import org.eclipse.jgit.api.Git;
 import org.eclipse.jgit.api.Status;
-import org.eclipse.jgit.api.errors.GitAPIException;
 import org.eclipse.jgit.lib.Repository;
+import org.eclipse.jgit.revwalk.RevCommit;
 import org.eclipse.jgit.transport.CredentialsProvider;
+import org.eclipse.jgit.transport.PushResult;
 import org.eclipse.jgit.transport.UsernamePasswordCredentialsProvider;
 
 import java.io.File;
-import java.io.IOException;
-import java.nio.file.FileVisitResult;
-import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.nio.file.SimpleFileVisitor;
-import java.nio.file.attribute.BasicFileAttributes;
 import java.time.LocalDateTime;
-import java.util.ArrayList;
 import java.util.List;
-
-import static com.plociennik.vestal.common.CommonUtils.logAndThrow;
 
 @Slf4j
 public class RepoPushChangesService {
@@ -50,69 +44,40 @@ public class RepoPushChangesService {
         try (Git git = new Git(gitRepository)) {
             AppConfig currentConfig = configManager.getCurrentConfig();
             LocalRepository localRepository = currentConfig.vestalRepository.localRepository;
-
-            Path workDir = Paths.get(localRepository.encryptionPath);
-            List<String> txtFiles = findTxtFiles(workDir);
-
-            if (txtFiles.isEmpty()) {
-                log.info("[{}] There was nothing to stage because the local repo is empty.", "1231_10082026");
-                return;
-            }
-
+            List<Path> files = FilesCollector.from(Path.of(localRepository.encryptionPath));
             AddCommand add = git.add();
-            txtFiles.forEach(add::addFilepattern);
+
+            Path repoRoot = gitRepository.getWorkTree().toPath();
+
+            files.stream()
+                    .map(file -> repoRoot.relativize(file).toString().replace(File.separatorChar, '/'))
+                    .forEach(add::addFilepattern);
             add.call();
 
+            // todo: status here is useless: due to non-deterministic way of encrypting files the result will always be
+            // todo: different, thus status will never be clean
             Status status = git.status().call();
             if (status.isClean()) {
                 log.info("[{}] There were no changes, cancelling the process.", "1232_10082026");
                 return;
             }
 
-            git.commit()
-                    .setMessage(createCustomCommitMessage())
+            String customCommitMessage = createCustomCommitMessage();
+            RevCommit commit = git.commit()
+                    .setMessage(customCommitMessage)
                     .call();
 
             CredentialsProvider credentialsProvider =
                     new UsernamePasswordCredentialsProvider(credentialsStorage.get(CredentialType.GITHUB_TOKEN), "");
 
-            // todo: push result for logging maybe
-            git.push()
+            // todo: push result has to be handled, otherwise can silently fail without logging anything
+            Iterable<PushResult> pushResults = git.push()
                     .setCredentialsProvider(credentialsProvider)
                     .call();
-
-        } catch (GitAPIException e) {
-            logAndThrow("1218_10082026", "Something happened when trying to push changes.", e);
+        } catch (Exception e) {
+            throw new VestalException("1218_10082026", "Something happened when trying to push changes.", e);
         }
         log.info("[{}] Push successful.", "1225_10082026");
-    }
-
-    private List<String> findTxtFiles(Path workDir) {
-        List<String> txtFiles = new ArrayList<>();
-
-        try {
-            Files.walkFileTree(workDir, new SimpleFileVisitor<>() {
-                @Override
-                public FileVisitResult preVisitDirectory(Path dir, BasicFileAttributes attrs) {
-                    if (dir.getFileName() != null && dir.getFileName().toString().equals(".git")) {
-                        return FileVisitResult.SKIP_SUBTREE;
-                    }
-                    return FileVisitResult.CONTINUE;
-                }
-
-                @Override
-                public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) {
-                    log.info("Visiting: {}", file);
-                    txtFiles.add(workDir.relativize(file).toString().replace(File.separatorChar, '/'));
-                    return FileVisitResult.CONTINUE;
-                }
-            });
-        } catch (IOException e) {
-            // todo: log
-            throw new RuntimeException(e);
-        }
-
-        return txtFiles;
     }
 
     private String createCustomCommitMessage() {
